--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -16,6 +16,7 @@
     <li><a href="{{ url_for('index') }}">HOme</a></li>
     <li><a href="{{ url_for('abc') }}">ABC neco</a></li>
     <li><a href="{{ url_for('kvetak') }}">Květák</a></li>
+    <li><a href="{{ url_for('Login') }}">Login</a></li>
     <li><a href="/banany/ahoj">Banány</a></li>
 </ul>
 
